# yuma123-netconfd-module

./: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  gmon.out  liblsi-ivi-load.la  liblsi_ivi_load_la-lsi-ivi-load.lo  libtool  lsi-ivi-load-6060b-get  lsi-ivi-load-6060b-set  lsi-ivi-load-get  lsi-ivi-load-serial-et5304-get  lsi-ivi-load-serial-et5304-set  lsi-ivi-load-set  lsi-ivi-load.c  lsi-ivi-load.yang
.deps/: liblsi_ivi_load_la-lsi-ivi-load.Plo
.libs/: liblsi-ivi-load.la  liblsi-ivi-load.lai  liblsi-ivi-load.so.0  liblsi-ivi-load.so.0.0.0
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.2
example/: load-netconf.py  nc-session-load-0-in  nc-session-load-0-in.ts  nc-session-load-0-out  nc-session-load-0-out.ts  networks-key.xml
